--- a/lms/src/main/resources/templates/association/refundPolicy/refundPolicyList.html
+++ b/lms/src/main/resources/templates/association/refundPolicy/refundPolicyList.html
@@ -13,7 +13,7 @@
 
 <div layout:fragment="content">
 	<h3>연회비 환불정책</h3>
-	<a type="button" href="/association/refundPolicy/addRefundPolicyAnnualFee" class="btn btn-secondary btn-rightLarge">연회비 환불정책 추가</a>
+	<a href="/association/refundPolicy/addRefundPolicyAnnualFee" class="btn btn-secondary btn-rightLarge">연회비 환불정책 추가</a>
 	<table class="table">
 		<thead>
 			<tr>
@@ -33,7 +33,7 @@
 	<br>
 	<br>
 	<h3>강의 환불정책</h3>
-	<a type="button" href="/association/refundPolicy/addRefundPolicyLectureList" class="btn btn-secondary btn-rightLarge">강의 환불정책 추가</a>
+	<a href="/association/refundPolicy/addRefundPolicyLectureList" class="btn btn-secondary btn-rightLarge">강의 환불정책 추가</a>
 	<table class="table">
 		<thead>
 			<tr>
@@ -55,7 +55,7 @@
 	<br>
 	<br>
 	<h3>자격 환불정책</h3>
-	<a type="button" href="/association/refundPolicy/addRefundPolicyLicense" class="btn btn-secondary btn-rightLarge">자격 환불정책 추가</a>
+	<a href="/association/refundPolicy/addRefundPolicyLicense" class="btn btn-secondary btn-rightLarge">자격 환불정책 추가</a>
 	<table class="table">
 		<thead>
 			<tr>
